# StickyFingers

./: README.md
sticky_fingers/: CMakeLists.txt  package.xml
sticky_fingers/launch/: 1g_1b.launch
sticky_fingers/src/: finger_control_dummy_node.cpp  sticky_fingers.cpp
sticky_fingers/world/: 1g_1b.world  blocks_on_table.world
